Handle large volumes of notifications better; fixes #1361
- Switch to slide animations and denser layout
- Add maximum bound to size of notification area; scrollbar if needed
- Add link to /eventlog/
- Add dismiss-all button
- Remove old unused notifications templates and LESS code

--- a/mailpile/www/default/less/app/notifications.less
+++ b/mailpile/www/default/less/app/notifications.less
@@ -1,89 +1,42 @@
-/* Notifications - Not implemented dropdown */
-
-  #notifications {
-    width: 300px;
-    height: 400px;
-    position: absolute;
-    top: 61px;
-    left: 20px;
-    border-radius: 3px;
-    z-index: 10000;
-    background: @white;
-    border: 1px solid @gray;
-    box-sizing: border-box;
-    -moz-box-shadow:    3px 3px 5px 0px @gray;
-    -webkit-box-shadow: 3px 3px 5px 0px @gray;
-    box-shadow:         3px 3px 5px 0px @gray;
-  }
-  
-  .notifications-chrome() {
-    height: 30px;
-    background: @grayLight;
-    box-sizing: border-box;
-    text-align: center;
-    font-style: 14px;
-    font-weight: bold;
-    line-height: 14px;
-    color: @grayDark;
-  }
-
-  .notifications-header {
-    .notifications-chrome();
-    border-bottom: 1px solid @grayMid;
-  }
-  .notifications-bottom {
-    .notifications-chrome();
-    border-top: 1px solid @grayMid;
-  }
-  
-  .notifications-window {
-    height: 338px;
-    overflow-x: scroll;
-  }  
-  
-  li.notification { width: 298px; min-height: 60px; margin: 0px; padding: 0px; display: block; border-bottom: 1px solid @grayMid; }
-  li.notification a { width: 100%; height: 100%; display: block; }
-  li.notification img { width: 18px; }
-
-	.notification-urgent {
-		border-radius: @base-border-radius;
-		background: @red;
-		padding: 1px 4px;
-	}
-
-	.notification-important {
-		border-radius: @base-border-radius;
-		background: @blue;
-		padding: 1px 4px;
-	}
-	
-	.notification-normal {
-		background: @gray;  	
-	}
-
-
 /* Notification Bubbles */
 
-  #notification-bubbles {
+  #notifications {
     position: fixed;
-    bottom: 15px;
-    right: 10px;
+    bottom: 0px; //15px;
+    right: 15px;
     width: 250px;
     display: inline-block;
     z-index: 1000;
     box-sizing: content-box;
+    max-height: 30%;
+    overflow: auto;
+  }
+
+  #notification-bubbles, #notifications-header {
+    background: @grayDark;
+    color: @gray;
+    font-weight: normal;
+    font-size: 14px;
+  }
+
+  #notifications-header {
+    margin: 0;
+    border-top-left-radius: (@base-border-radius);
+    border-top-right-radius: (@base-border-radius);
+    border-bottom: 0;
+    padding: (@base-padding / 4) @base-padding;
+    padding-bottom: 2px;
+    box-sizing: padding-box;
+    font-size: 15px;
+    font-weight: bold;
   }
 
   div.notification-bubble {
-    margin-top: (@base-margin / 1.5);
     display: table;
-    background: @grayDark;
-    border-radius: (@base-border-radius);
+    margin-top: 0;
     padding: (@base-padding / 2) @base-padding;
+    border-top: 1px solid @black;
     box-sizing: padding-box;
-    font-weight: normal;
-    font-size: 14px;
-    color: @gray;
   }
 
   div.notification-bubble span.icon {
@@ -96,16 +49,16 @@
   }
 
   div.notification-bubble.error   .icon { color: @red; }
-	div.notification-bubble.warning .icon { color: @orange; }
+  div.notification-bubble.warning .icon { color: @orange; }
   div.notification-bubble.success .icon { color: @green; }
 
+  #notifications-header span.text,
   div.notification-bubble span.text {
-    width: 175px;
+    width: 100%;
     display: table-cell;
     vertical-align: text-top;
     padding-left: 10px;
     padding-bottom: 3px;
-    font-size: 14px;
     line-height: 18px;
     color: @white;
   }
@@ -118,11 +71,11 @@
     font-weight: normal;
     font-style: italic;
     color: @gray;
-  }  
+  }
 
-  div.notification-bubble a.action         { color: @gray; }
-  div.notification-bubble a.action:visited { color: @gray; }  
-  div.notification-bubble a.action:hover   { color: @grayLight; }
+  #notifications a         { color: @gray; }
+  #notifications a:visited { color: @gray; }
+  #notifications a:hover   { color: @grayLight; }
 
-  div.notification-bubble a.notification-close        { display: table-cell; vertical-align: text-top; color: @gray; }
-  div.notification-bubble a.notification-close:hover  { color: @grayLight; }
+  #notifications a.notifications-close-all,
+  #notifications a.notification-close { display: table-cell; vertical-align: text-top; }
